--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,20 +1,28 @@
 {
     "name": "OpenHands Development",
-    "dockerFile": "Dockerfile",
+    "build": {
+        "dockerfile": "Dockerfile"
+    },
     "forwardPorts": [3000],
     "runArgs": [
         "--pull=always",
-        "-e", "SANDBOX_RUNTIME_CONTAINER_IMAGE=docker.all-hands.dev/all-hands-ai/runtime:0.17-nikolaik",
-        "-e", "LOG_ALL_EVENTS=true",
-        "-v", "/var/run/docker.sock:/var/run/docker.sock",
-        "-v", "${localEnv:HOME}/.openhands-state:/.openhands-state",
-        "--add-host", "host.docker.internal:host-gateway"
+        "--add-host=host.docker.internal:host-gateway"
+    ],
+    "containerEnv": {
+        "SANDBOX_RUNTIME_CONTAINER_IMAGE": "docker.all-hands.dev/all-hands-ai/runtime:0.17-nikolaik",
+        "LOG_ALL_EVENTS": "true"
+    },
+    "mounts": [
+        "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind",
+        "source=${localEnv:HOME}/.openhands-state,target=/.openhands-state,type=bind"
     ],
     "customizations": {
         "vscode": {
             "extensions": [
                 "ms-azuretools.vscode-docker",
-                "github.copilot"
+                "ms-python.python",
+                "ms-python.vscode-pylance",
+                "redhat.vscode-yaml"
             ]
         }
     }
